packages/docs/i18n/ko/docusaurus-plugin-content-docs/version-4.4.0/api/MasonryInfiniteGridOptions.mdx
---
custom_edit_url: null
---

<div>

</div>

**Type**: TSInterface

|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|horizontal|boolean||
|percentage|Array&lt;"position" \| "size"&gt; \| boolean||
|isEqualSize|boolean||
|isConstantSize|boolean||
|gap|number||
|attributePrefix|string||
|resizeDebounce|number||
|maxResizeDebounce|number||
|autoResize|boolean||
|useFit|boolean||
|useTransform|boolean||
|renderOnPropertyChange|boolean||
|preserveUIOnDestroy|boolean||
|defaultDirection|"start" \| "end"||
|outlineLength|number||
|outlineSize|number||
|useRoundedSize|boolean||
|useResizeObserver|boolean||
|observeChildren|boolean||
|externalItemRenderer|ItemRenderer \| null||
|externalContainerManager|ContainerManager \| null||
|column|number|열의 개수. 열의 개수가 0이라면, 컨테이너의 사이즈에 의해 계산이 된다. outlineLength 대신 사용할 수 있다.(default: 0) |
|columnSize|number| 열의 사이즈. 만약 열의 사이즈가 0이면, 아이템들의 첫번째 아이템의 사이즈로 계산이 된다. outlineSize 대신 사용할 수 있다.(default: 0) |
|columnSizeRatio|number|열의 사이즈 비율(inlineSize / contentSize). 0은 미설정이다. |
|align|GridAlign|아이템들의 위치의 정렬. <code>stretch</code>를 사용하고 싶다면 <code>column</code> 또는 <code>columnSize</code> 옵션을 설정해라.  (&quot;start&quot;, &quot;center&quot;, &quot;end&quot;, &quot;justify&quot;, &quot;stretch&quot;) (default: &quot;justify&quot;)|
|columnCalculationThreshold|number|칼럼 개수를 계산하기 위한 차이 임계값. offset 사이즈는 반올림으로 게산하기 때문에 정확하지 않을 수 있다. (default: 1)|
|horizontal|boolean||
|percentage|Array&lt;"position" \| "size"&gt; \| boolean||
|isEqualSize|boolean||
|isConstantSize|boolean||
|gap|number||
|attributePrefix|string||
|resizeDebounce|number||
|maxResizeDebounce|number||
|autoResize|boolean||
|useFit|boolean||
|useTransform|boolean||
|renderOnPropertyChange|boolean||
|preserveUIOnDestroy|boolean||
|defaultDirection|"start" \| "end"||
|outlineLength|number||
|outlineSize|number||
|useRoundedSize|boolean||
|useResizeObserver|boolean||
|observeChildren|boolean||
|externalItemRenderer|ItemRenderer \| null||
|externalContainerManager|ContainerManager \| null||
|container|boolean \| string \| HTMLElement|container를 적용할 대상. false면 자기 자신, true면 container를 생성. string 또는 HTMLElement는 직접 대상을 지정. (default: false)|
|containerTag|string|container를 생성한다면 container의 tag를 정할 수 있다. (default: &quot;div&quot;)|
|threshold|number|다음 아이템 그룹을 추가하기 위한 스크롤 영역의 크기. (default: 100)|
|useRecycle|boolean|보이는 영역의 DOM만 보여줄지 여부. (default: true)|
|gridConstructor|GridFunction|Infinite 기능을 적용할 Grid 클래스.|
|renderer|Renderer \| null| DOM을 렌더하는 클래스. |

